# mprpc

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: logger.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcheader.proto  zookeeperutil.cc
src/include/: lockqueue.h  mprpcapplication.h  mprpcprovider.h
test/protobuf/: a.out  main  test.cc  test.pb.cc  test.pb.h  test.proto
